@@ -19,7 +19,7 @@ AC_ARG_ENABLE(targets,
   *)        enable_targets=$enableval ;;
 esac])dnl
 
-AC_CONFIG_HEADER(config.h)
+AC_CONFIG_HEADER(config.h:config.in)
 
 AC_CONFIG_AUX_DIR(`cd $srcdir/..;pwd`)
 AC_CANONICAL_SYSTEM
